--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   fl_chart: ^0.70.2
   flutter_launcher_icons: ^0.14.3
   firebase_database: ^11.3.5
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
